// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapHTTPTransactionWithMethodOverride should let normal methods pass 1`] = `
{
  "data": "",
  "getPingCalls": [
    [
      {},
      {
        "method": "get",
        "operationId": "getPing",
        "parameters": [],
        "path": "/ping",
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "definitions": {},
                  "properties": {
                    "pong": {
                      "enum": [
                        "pong",
                      ],
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Pong",
          },
        },
        "summary": "Checks API's availability.",
        "tags": [
          "system",
        ],
      },
    ],
  ],
  "headers": {
    "connection": "close",
    "date": undefined,
    "transaction-id": "1",
    "transfer-encoding": "chunked",
  },
  "status": 200,
}
`;

exports[`wrapHTTPTransactionWithMethodOverride should override methods 1`] = `
{
  "data": "",
  "getPingCalls": [
    [
      {},
      {
        "method": "get",
        "operationId": "getPing",
        "parameters": [],
        "path": "/ping",
        "requestBody": undefined,
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "definitions": {},
                  "properties": {
                    "pong": {
                      "enum": [
                        "pong",
                      ],
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Pong",
          },
        },
        "summary": "Checks API's availability.",
        "tags": [
          "system",
        ],
      },
    ],
  ],
  "headers": {
    "connection": "close",
    "date": undefined,
    "transaction-id": "0",
    "transfer-encoding": "chunked",
  },
  "status": 200,
}
`;
